<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:background="#f6f6f6">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="315dp"
        android:layout_height="308dp"
        android:background="@drawable/rubb" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/title_develop"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView110"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="GEO JOSE"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/geomail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:gravity="center"
        android:text="geocheeramkuzhy@gmail.com"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:gravity="center"
        android:text="@string/zid"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/zidmail"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/title_zidmail"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/textView12"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:gravity="center"
        android:text="@string/sha"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/shamail"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/title_shamail"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/textView13"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/cyr"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/title_cyrmail"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/textView14"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/jee"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/title_jeemail"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/textView15"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>


    <TextView
        android:layout_width="398dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/gect"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView16"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/felix"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/felmail"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/textView17"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

</LinearLayout>
</ScrollView>