<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id = "@+id/tvDate"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "Select Date"
        android:onClick = "setDate"
        android:padding = "16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="343dp"
        android:layout_height="271dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        app:srcCompat="@drawable/rubb" />

    <TextView

        android:id="@+id/tvDomestic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geo"
        android:text="@string/domestic"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_marginRight="20dp"
            android:gravity="right"

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnKottayam"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:background="@drawable/button"
                android:text="@string/kottayam"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/btnKochi"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/kochi"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvInternational"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/geo"
        android:text="@string/international"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/btnBangkok"
                android:layout_width="130dp"
                android:layout_height="wrap_content"

                android:background="@drawable/button"
                android:text="@string/bangkok"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">


            <Button

                android:id="@+id/btnKualalumpur"
                android:layout_width="140dp"
                android:layout_height="wrap_content"

                android:background="@drawable/button"
                android:text="kuala lumpur"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="*The prices shown above do not include GST @ 5% on purchase and expenses towards packing,\ntransportation,warehousing and other incidentals."
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.981" />


</LinearLayout>
</ScrollView>

